change p(x|Pie,Sigma) to p(x|Mu,Sigma)

--- a/notebooks/gaussian_processes.ipynb
+++ b/notebooks/gaussian_processes.ipynb
@@ -80,7 +80,7 @@
     "\n",
     "What if we chose to use Gaussian distributions to model our data? \n",
     "\n",
-    "$$p(x \\mid \\pi, \\Sigma) = (2\\pi)^{-k/2}|\\Sigma|^{-1/2} \\exp\\left\\{ -\\frac{1}{2} (x-\\mu)^{\\prime}\\Sigma^{-1}(x-\\mu) \\right\\}$$\n",
+    "$$p(x \\mid \\mu, \\Sigma) = (2\\pi)^{-k/2}|\\Sigma|^{-1/2} \\exp\\left\\{ -\\frac{1}{2} (x-\\mu)^{\\prime}\\Sigma^{-1}(x-\\mu) \\right\\}$$\n",
     "\n",
     "There would not seem to be an advantage to doing this, because normal distributions are not particularly flexible distributions in and of themselves. However, adopting a set of Gaussians (a multivariate normal vector) confers a number of advantages. First, the marginal distribution of any subset of elements from  a multivariate normal distribution is also normal:\n",
     "\n",
@@ -3068,9 +3068,9 @@
    "id": "05a9210d3ea6546e14e6fcb8fd10a906"
   },
   "kernelspec": {
-   "display_name": "gp-pydata24",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
-   "name": "gp-pydata24"
+   "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
@@ -3082,7 +3082,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.11.8"
   },
   "latex_envs": {
    "bibliofile": "biblio.bib",
